--- a/main.html
+++ b/main.html
@@ -8,9 +8,16 @@
 <body>
 
   <div class="wrapper">
-    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" controls></video>
-    <div class="speed">
-      <div class="speed-bar">1×</div>
+    <video class="flex" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4" controls></video>
+     <div class="controls">
+      <button class="toggle">►</button> <!-- Play/Pause Button -->
+      <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1"> <!-- Volume -->
+      <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1"> <!-- Speed -->
+      <button data-skip="-10">« 10s</button> <!-- Rewind -->
+      <button data-skip="25">25s »</button> <!-- Forward -->
+      <div class="progress">
+        <div class="progress__filled"></div> <!-- Progress bar -->
+      </div>
     </div>
   </div>
 
