--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
       <button class="toggle">►</button> <!-- Play/Pause Button -->
       <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1"> <!-- Volume -->
       <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1"> <!-- Speed -->
-      <button data-skip="-10" class=".rewind">« 10s</button> <!-- Rewind -->
+      <button data-skip="-10" class="rewind">« 10s</button> <!-- Rewind -->
       <button data-skip="25">25s »</button> <!-- Forward -->
       <div class="progress">
         <div class="progress__filled"></div> <!-- Progress bar -->
